--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3",
+    "google-libphonenumber": "^3.1.11",
     "hoek": "^4.2.1",
     "moment": "^2.19.3",
     "twilio": "^3.0.0-rc.13"
